data/derived/comb/progs/unify/prog7619.ml.out
Characters 20-25:
  let fu x =  (fu, x< fu(x));;
                      ^^^^^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a
       The type variable 'a occurs inside ('a -> 'a) * bool
